--- a/index.html
+++ b/index.html
@@ -2,32 +2,13 @@
 <html lang="en">
 <head>
   <meta charset="UTF-8"/>
-  <title>Layout 2</title>
-
+  <title>ghostgearh8rs</title>
   <link rel="stylesheet" type="text/css" href="styles/site.css" media="all"/>
 </head>
 <body>
-  <header class="text-pad">
-    <div class="row toprow">
-        <h1 class="layout">Layout 2</h1>
-
-        <nav class="nav">
-          Nav
-        </nav>
-    </div>
-  </header>
-
-  <main class="text-pad">
-    <div class="row bottomrow">
-        <article class="article">
-          Article
-        </article>
-
-        <aside class="aside">
-          Sidebar
-        </aside>
-    </div>
-  </main>
+  <h1>
+    f*ck ghost gear >:p
+  </h1>
 
 </body>
 </html>
