--- a/index.html
+++ b/index.html
@@ -6,9 +6,23 @@
   <link rel="stylesheet" type="text/css" href="styles/site.css" media="all"/>
 </head>
 <body>
-  <h1>
-    f*ck ghost gear >:p
-  </h1>
+  <h1>f*ck ghost gear >:p</h1>
 
+  <h2>choose your player!</h2>
+
+  <main class="grid">
+    <div class="column column-left">
+        <h3>whale</h3>
+    </div>
+
+    <div class="column column-middle">   
+        <h3>lobsterman</h3>
+    </div>
+
+    <div class="column column-right">
+        <h3>beachgoer</h3>
+    </div>
+
+  </main>
 </body>
 </html>
