commit images/beachgoer.png commit images/boat.png commit images/whaleshit.png commit index.html commit styles/site.css

--- a/index.html
+++ b/index.html
@@ -1,28 +1,38 @@
 <!DOCTYPE html>
 <html lang="en">
-<head>
-  <meta charset="UTF-8"/>
-  <title>ghostgearh8rs</title>
-  <link rel="stylesheet" type="text/css" href="styles/site.css" media="all"/>
-</head>
-<body>
-  <h1>f*ck ghost gear >:p</h1>
+    <head>
+        <meta charset="UTF-8"/>
+        <title>ghostgearh8rs</title>
+        <link rel="stylesheet" type="text/css" href="styles/site.css" media="all"/>
+    </head>
 
-  <h2>choose your player!</h2>
+    <body>
+        <h1>f*ck ghost gear >:p</h1>
 
-  <main class="grid">
-    <div class="column column-left">
-        <h3>whale</h3>
-    </div>
+        <h2>choose your player!</h2>
 
-    <div class="column column-middle">   
-        <h3>lobsterman</h3>
-    </div>
+        <main class="player-select">
+            <div class="column-left">
+                <h3 class="select">whale</h3>
+                <center>
+                    <img src=images/whaleshit.png alt="Pixel Whale">
+                </center>
+            </div>
 
-    <div class="column column-right">
-        <h3>beachgoer</h3>
-    </div>
+            <div class="column-middle">   
+                <h3 class="select">lobsterman</h3>
+                <center>        
+                    <img src=images/boat.png alt="Pixel Boat">
+                </center>
+            </div>
 
-  </main>
-</body>
+            <div class="column-right">
+                <h3 class="select">beachgoer(?????)</h3>
+                <center>
+                    <img src=images/beachgoer.png alt="Pixel Beachgoer">
+                </center>
+            </div>
+        </main>
+
+    </body>
 </html>
