commit index.html commit styles/site.css

--- a/index.html
+++ b/index.html
@@ -6,33 +6,30 @@
         <link rel="stylesheet" type="text/css" href="styles/site.css" media="all"/>
     </head>
 
-    <body>
-        <h1>f*ck ghost gear >:p</h1>
+       <body class="tv-static">
+           <h1>f*ck ghost gear >:p</h1>
+           <h2><em>choose your player!</em></h2>
+             <main class="player-select glitch">
+                <div class="column">
+                    <center>
+                        <img src=images/whaleshit.png alt="Pixel Whale">
+                    </center>
+                    <h3 class="select">whale</h3>
+                </div>
 
-        <h2>choose your player!</h2>
+                <div class="column">   
+                    <center>        
+                        <img src=images/boat.png alt="Pixel Boat">
+                    </center>
+                    <h3 class="select">lobsterman</h3>
+                </div>
 
-        <main class="player-select">
-            <div class="column-left">
-                <h3 class="select">whale</h3>
-                <center>
-                    <img src=images/whaleshit.png alt="Pixel Whale">
-                </center>
-            </div>
-
-            <div class="column-middle">   
-                <h3 class="select">lobsterman</h3>
-                <center>        
-                    <img src=images/boat.png alt="Pixel Boat">
-                </center>
-            </div>
-
-            <div class="column-right">
-                <h3 class="select">beachgoer(?????)</h3>
-                <center>
-                    <img src=images/beachgoer.png alt="Pixel Beachgoer">
-                </center>
-            </div>
-        </main>
-
-    </body>
+                <div class="column">
+                    <center>
+                        <img src=images/beachgoer.png alt="Pixel Beachgoer">
+                    </center>
+                    <h3 class="select">beachgoer(?????)</h3>
+                </div>
+            </main>
+        </body>
 </html>
