--- a/index.html
+++ b/index.html
@@ -6,13 +6,17 @@
         <link rel="stylesheet" type="text/css" href="styles/site.css" media="all"/>
     </head>
 
-       <body class="tv-static">
+    <body class="tv-static">
+        <!-- <img src=images/sound-off.png id="sound"/> -->
+        <audio id="splash-audio" controls loop>
+            <source src="splash-audio.mp3" type="audio/mp3">
+        </audio>
            <h1>f*ck ghost gear >:p</h1>
            <h2><em>choose your player!</em></h2>
              <main class="player-select glitch">
                 <div class="column">
                     <center>
-                        <img src=images/whaleshit.png alt="Pixel Whale">
+                        <a href=whale-splash.html><img src=images/whaleshit.png alt="Pixel Whale"></a>
                     </center>
                     <h3 class="select">whale</h3>
                 </div>
@@ -31,5 +35,25 @@
                     <h3 class="select">beachgoer(?????)</h3>
                 </div>
             </main>
-        </body>
+            <!-- <script>
+                var img = document.getElementById("image");
+                var audio = document.getElementById("splash-audio");  
+                img.addEventListener('click', function() {
+                    let tsource = str(img.src);
+                    if (tsource.equals('images/sound-off.png')) {
+                        img.src = images/sound-on.png;
+                        sound.play();
+                    }
+                    else{
+                        img.src = images/sound-off.png;
+                        sound.off();
+                    }
+                    console.log(tsource);
+  
+                });    
+                audio.volume=1.0;
+            </script> -->
+        </body>   
 </html>
+
+
