--- a/index.html
+++ b/index.html
@@ -11,30 +11,34 @@
         <audio id="splash-audio" controls loop>
             <source src="splash-audio.mp3" type="audio/mp3">
         </audio>
-           <h1>f*ck ghost gear >:p</h1>
-           <h2><em>choose your player!</em></h2>
-             <main class="player-select glitch">
-                <div class="column">
-                    <center>
-                        <a href=whale-splash.html><img src=images/whaleshit.png alt="Pixel Whale"></a>
-                    </center>
-                    <h3 class="select">whale</h3>
-                </div>
 
-                <div class="column">   
-                    <center>        
-                        <img src=images/boat.png alt="Pixel Boat">
-                    </center>
-                    <h3 class="select">lobsterman</h3>
-                </div>
+        <h1>f*ck ghost gear >:p</h1>
 
-                <div class="column">
-                    <center>
-                        <img src=images/beachgoer.png alt="Pixel Beachgoer">
-                    </center>
-                    <h3 class="select">beachgoer(?????)</h3>
-                </div>
-            </main>
+        <h2><em>choose your player!</em></h2>
+
+        <!-- player selection options -->
+        <main class="player-select glitch">
+            <div class="column">
+                <center>
+                    <a href=whale-splash.html><img src=images/whaleshit.png alt="Pixel Whale"></a>
+                </center>
+                <h3 class="select">whale</h3>
+            </div>
+
+            <div class="column">   
+                <center>        
+                    <img src=images/boat.png alt="Pixel Boat">
+                </center>
+                <h3 class="select">lobsterman</h3>
+            </div>
+
+            <div class="column">
+                <center>
+                    <img src=images/beachgoer.png alt="Pixel Beachgoer">
+                </center>
+                <h3 class="select">beachgoer(?????)</h3>
+            </div>
+        </main>
             <!-- <script>
                 var img = document.getElementById("image");
                 var audio = document.getElementById("splash-audio");  
@@ -53,7 +57,7 @@
                 });    
                 audio.volume=1.0;
             </script> -->
-        </body>   
+    </body>   
 </html>
 
 
