commit index.html commit styles/site.css commit text/yellow-tubing.txt commit whale-spash.html

--- a/index.html
+++ b/index.html
@@ -12,7 +12,7 @@
             <source src="splash-audio.mp3" type="audio/mp3">
         </audio>
 
-        <h1>f*ck ghost gear >:p</h1>
+        <h1 class="glow">f*ck ghost gear >:p</h1>
 
         <h2><em>choose your player!</em></h2>
 
