commit README.md commit captions.txt commit images/rope1.jpg commit images/rope2.png commit images/rope3.png commit images/social1.jpg commit images/social2.jpg commit images/vessel1.png commit images/vessel2.jpg commit images/vessel3.jpg commit images/yellow-tubing1.png commit images/yellow-tubing2.png commit images/yellow-tubing3.png commit index.html commit resources.html commit styles/site.css commit whale-splash.html

--- a/index.html
+++ b/index.html
@@ -14,29 +14,30 @@
 
         <h1 class="glow">f*ck ghost gear >:p</h1>
 
-        <h2><em>choose your player!</em></h2>
+        <!-- <h2><em>choose your player!</em></h2> -->
 
         <!-- player selection options -->
         <main class="player-select glitch">
             <div class="column">
-                <center>
-                    <a href=whale-splash.html><img src=images/whaleshit.png alt="Pixel Whale"></a>
-                </center>
-                <h3 class="select">whale</h3>
+
             </div>
 
             <div class="column">   
-                <center>        
+                <!-- <center>        
                     <img src=images/boat.png alt="Pixel Boat">
                 </center>
-                <h3 class="select">lobsterman</h3>
+                <h3 class="select">lobsterman</h3> -->
+                <center>
+                    <a href=whale-splash.html><img src=images/whaleshit.png alt="Pixel Whale"></a>
+                </center>
+                <h3 class="select"><em>click to play</em></h3>
             </div>
 
             <div class="column">
-                <center>
+                <!-- <center>
                     <img src=images/beachgoer.png alt="Pixel Beachgoer">
                 </center>
-                <h3 class="select">beachgoer(?????)</h3>
+                <h3 class="select">beachgoer(?????)</h3> -->
             </div>
         </main>
             <!-- <script>
